# OMP

./: .clang-format  .gitignore  Base.cc  Base.h  CHANGELOG.md  LICENSE.md  MAKEFILE_COMPILE  Main.cc  Makefile  Makefile.am  PKGBUILD  Parts.cc  Parts.h  README  README.md  TimeConversion.cc  TimeConversion.h  com.openmusicplayer.OMP.appdata.xml  com.openmusicplayer.OMP.desktop  com.openmusicplayer.OMP.json  com.openmusicplayer.OMP.yml  configure.ac  makedeb.sh  meson-options.txt  meson.build  meson_options.txt  omp.desktop
.github/workflows/: main.yml
Configuration/: Configuration.cc  Configuration.h  DefaultValue.cc  DefaultValue.h  DefaultValues.cc  DefaultValues.h
Errors/: Errors.cc  Errors.h
GUI/: Artwork.cc  Artwork.h  ChildWindow.cc  ChildWindow.h  GUI.cc  GUI.h  GUIElement.h  GUIElementList.h  MenuBar.cc  MenuBar.h  Seekbar.cc  Seekbar.h  SpinButtonScale.cc  SpinButtonScale.h  StatusBar.cc  StatusBar.h  Tagview.cc  Tagview.h
GUI/Elements/Abouts/: About.cc  About.h  Abouts.cc  Abouts.h
GUI/Elements/ChildWindows/: ChildWindow.cc  ChildWindow.h  ChildWindows.cc  ChildWindows.h
GUI/Elements/ConfigurationGUIs/: ConfigurationGUI.cc  ConfigurationGUI.h  ConfigurationGUIs.cc  ConfigurationGUIs.h  Panel.cc  Panel.h  PanelTreeViewColumnRecord.h
GUI/Elements/ConfigurationGUIs/Panels/Artwork/: ArtworkPanel.cc  ArtworkPanel.h  ArtworkPanelColumnRecord.h
GUI/Elements/ConfigurationGUIs/Panels/GUI/: GUIPanel.cc  GUIPanel.h
GUI/Elements/ConfigurationGUIs/Panels/KeyboardShortcuts/: :w  KeyboardShortcutsPanel.cc  KeyboardShortcutsPanel.h  KeyboardShortcutsPanelColumnRecord.h
GUI/Elements/ConfigurationGUIs/Panels/Metadata/: MetadataPanel.cc  MetadataPanel.h  MetadataPanelColumnRecord.h
GUI/Elements/ConfigurationGUIs/Panels/Output/: OutputPanel.cc  OutputPanel.h
GUI/Elements/ConfigurationGUIs/Panels/Playback/: PlaybackPanel.cc  PlaybackPanel.h
GUI/Elements/ConfigurationGUIs/Panels/Playlist/: PlaylistPanel.cc  PlaylistPanel.h
GUI/Elements/ConfigurationGUIs/Panels/ReplayGain/: ReplayGainPanel.cc  ReplayGainPanel.h
GUI/Elements/ConfigurationGUIs/Panels/Scrobbling/: ScrobblingPanel.cc  ScrobblingPanel.h
GUI/Elements/FileChoosers/: FileChooser.cc  FileChooser.h  FileChoosers.cc  FileChoosers.h  ]
GUI/Elements/MainMenus/: MainMenu.cc  MainMenu.h  MainMenus.cc  MainMenus.h
GUI/Elements/PlaybackControllers/: PlaybackController.cc  PlaybackController.h  PlaybackControllers.cc  PlaybackControllers.h
GUI/Elements/PlaylistComboBoxes/: PlaylistComboBox.cc  PlaylistComboBox.h  PlaylistComboBoxColumnRecord.h  PlaylistComboBoxes.cc  PlaylistComboBoxes.h
GUI/Elements/Playlists/: '  Playlist.cc  Playlist.h  PlaylistChangesCancelDialog.cc  PlaylistChangesCancelDialog.h  PlaylistColumn.h  PlaylistColumnRecord.h  PlaylistCreateDialog.cc  PlaylistCreateDialog.h  PlaylistDeleteDialog.cc  PlaylistDeleteDialog.h  PlaylistMenu.cc  PlaylistMenu.h  PlaylistRenameDialog.cc  PlaylistRenameDialog.h  PlaylistTreeStore.cc  PlaylistTreeStore.h  Playlists.cc  Playlists.h  PlaylistsDatabase.cc  PlaylistsDatabase.h  ]
KeyboardShortcuts/: KeyboardShortcuts.cc  KeyboardShortcuts.h
Metadata/: CueSheet.cc  CueSheet.h  Metadata.cc  Metadata.h  Tag.cc  Tag.h  TimeConversion.cc  TimeConversion.h  Track.cc  Track.h  TrackType.h
Playback/: ParserAndDecoder.cc  ParserAndDecoder.h  Playback.cc  Playback.h  TrackBin.cc  TrackBin.h
Scrobbling/: FailedScrobblesDatabase.cc  FailedScrobblesDatabase.h  Scrobbling.cc  Scrobbling.h
src/: app.cc  app.h  appwin.cc  appwin.h  main.cc  meson.build  omp.desktop  sidebar.cc  sidebar.h
src/resources/: omp-style.gresource.xml  omp.gresource.xml
src/resources/blueprints/: sidebar.blp  window.blp
src/resources/ui/: meson.build  sidebar.blp  sidebar.ui  window.blp  window.css  window.ui
subprojects/: blueprint-compiler.wrap
